cols_identity for new_id

--- a/notebooks/prepare_features.ipynb
+++ b/notebooks/prepare_features.ipynb
@@ -268,12 +268,12 @@
     "    df['event_time'] = pd.to_datetime(df['timestamp']).astype(int) / 1e9\n",
     "    df = pd.merge(df, pd.read_csv('data/click_categories.csv'), on='cat_id')\n",
     "    df['cat_id'] = df['cat_id'].astype(str)\n",
-    "    return df[['user_id', 'event_time', 'cat_id', 'level_0', 'level_1', 'level_2']]"
+    "    return df[['user_id', 'event_time', 'cat_id', 'level_0', 'level_1', 'level_2', 'new_uid']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "worse-bracelet",
    "metadata": {},
    "outputs": [],
@@ -292,201 +292,13 @@
    "id": "surprised-penalty",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "pursuant-senate",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import logging\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "from typing import List\n",
-    "\n",
-    "from dltranz.data_preprocessing.base import DataPreprocessor\n",
-    "from dltranz.data_preprocessing.util import pd_hist\n",
-    "\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "\n",
-    "class PandasDataPreprocessor(DataPreprocessor):\n",
-    "    \"\"\"Data preprocessor based on pandas.DataFrame\n",
-    "\n",
-    "    During preprocessing it\n",
-    "        * transform `cols_event_time` column with date and time\n",
-    "        * encodes category columns `cols_category` into ints;\n",
-    "        * apply logarithm transformation to `cols_log_norm' columns;\n",
-    "        * groups flat data by `col_id`;\n",
-    "        * arranges data into list of dicts with features\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    col_id : str\n",
-    "        name of column with ids\n",
-    "    cols_event_time : str,\n",
-    "        name of column with time and date\n",
-    "    cols_category : list[str],\n",
-    "        list of category columns\n",
-    "    cols_log_norm : list[str],\n",
-    "        list of columns to be logarithmed\n",
-    "    time_transformation: str. Default: 'default'.\n",
-    "        type of transformation to be applied to time column\n",
-    "    print_dataset_info : bool. Default: False.\n",
-    "        If True, print dataset stats during preprocessor fitting and data transformation\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self,\n",
-    "                 col_id: str,\n",
-    "                 cols_event_time: str,\n",
-    "                 cols_category: List[str],\n",
-    "                 cols_log_norm: List[str],\n",
-    "                 time_transformation: str = 'default',\n",
-    "                 print_dataset_info: bool = False):\n",
-    "\n",
-    "        super().__init__(col_id, cols_event_time, cols_category, cols_log_norm)\n",
-    "        self.print_dataset_info = print_dataset_info\n",
-    "        self.time_transformation = time_transformation\n",
-    "\n",
-    "    def fit(self, dt, **params):\n",
-    "        \"\"\"\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        dt : pandas.DataFrame with flat data\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        self : object\n",
-    "            Fitted preprocessor.\n",
-    "        \"\"\"\n",
-    "        # Reset internal state before fitting\n",
-    "        self._reset()\n",
-    "\n",
-    "        for col in self.cols_category:\n",
-    "            pd_col = dt[col].astype(str)\n",
-    "            mapping = {k: i + 1 for i, k in enumerate(pd_col.value_counts().index)}\n",
-    "            self.cols_category_mapping[col] = mapping\n",
-    "\n",
-    "            if self.print_dataset_info:\n",
-    "                logger.info(f'Encoder stat for \"{col}\":\\ncodes | trx_count\\n{pd_hist(dt[col], col)}')\n",
-    "\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, df, copy=True):\n",
-    "        \"\"\"Perform preprocessing.\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        df : pandas.DataFrame with flat data\n",
-    "        copy : bool, default=None\n",
-    "            Copy the input X or not.\n",
-    "        Returns\n",
-    "        -------\n",
-    "        features : List of dicts grouped by col_id.\n",
-    "        \"\"\"\n",
-    "        self.check_is_fitted()\n",
-    "        df_data = df.copy() if copy else df\n",
-    "\n",
-    "        if self.print_dataset_info:\n",
-    "            logger.info(f'Found {df_data[self.col_id].nunique()} unique ids')\n",
-    "\n",
-    "        # event_time mapping\n",
-    "        if self.time_transformation == 'none':\n",
-    "            pass\n",
-    "        elif self.time_transformation == 'default':\n",
-    "            df_data = self._td_default(df_data, self.cols_event_time)\n",
-    "        elif self.time_transformation == 'float':\n",
-    "            df_data = self._td_float(df_data, self.cols_event_time)\n",
-    "        elif self.time_transformation == 'gender':\n",
-    "            df_data = self._td_gender(df_data, self.cols_event_time)\n",
-    "        else:\n",
-    "            raise NotImplementedError(f'Unknown type of data transformation: \"{self.time_transformation}\"')\n",
-    "\n",
-    "        for col in self.cols_category:\n",
-    "            if col not in self.cols_category_mapping:\n",
-    "                raise KeyError(f\"column {col} isn't in fitted category columns\")\n",
-    "            pd_col = df_data[col].astype(str)\n",
-    "            df_data[col] = pd_col.map(self.cols_category_mapping[col]) \\\n",
-    "                .fillna(max(self.cols_category_mapping[col].values()))\n",
-    "            if self.print_dataset_info:\n",
-    "                logger.info(f'Encoder stat for \"{col}\":\\ncodes | trx_count\\n{pd_hist(df_data[col], col)}')\n",
-    "\n",
-    "        for col in self.cols_log_norm:\n",
-    "            df_data[col] = np.log1p(abs(df_data[col])) * np.sign(df_data[col])\n",
-    "            df_data[col] /= abs(df_data[col]).max()\n",
-    "            if self.print_dataset_info:\n",
-    "                logger.info(f'Encoder stat for \"{col}\":\\ncodes | trx_count\\n{pd_hist(df_data[col], col)}')\n",
-    "\n",
-    "        if self.print_dataset_info:\n",
-    "            df = df_data.groupby(self.col_id)['event_time'].count()\n",
-    "            logger.info(f'Trx count per clients:\\nlen(trx_list) | client_count\\n{pd_hist(df, \"trx_count\")}')\n",
-    "\n",
-    "        # column filter\n",
-    "        used_columns = [col for col in df_data.columns\n",
-    "                        if col in self.cols_category + self.cols_log_norm + ['event_time', self.col_id]]\n",
-    "\n",
-    "        logger.info('Feature collection in progress ...')\n",
-    "        features = df_data[used_columns] \\\n",
-    "            .assign(et_index=lambda x: x['event_time']) \\\n",
-    "            .set_index([self.col_id, 'et_index']).sort_index() \\\n",
-    "            .groupby(self.col_id).apply(lambda x: {k: np.array(v) for k, v in x.to_dict(orient='list').items()}) \\\n",
-    "            .rename('feature_arrays').reset_index().to_dict(orient='records')\n",
-    "\n",
-    "        def squeeze(rec):\n",
-    "            return {self.col_id: rec[self.col_id], **rec['feature_arrays']}\n",
-    "        features = [squeeze(r) for r in features]\n",
-    "\n",
-    "        if self.print_dataset_info:\n",
-    "            feature_names = list(features[0].keys())\n",
-    "            logger.info(f'Feature names: {feature_names}')\n",
-    "\n",
-    "        logger.info(f'Prepared features for {len(features)} clients')\n",
-    "        return features\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _td_default(df, cols_event_time):\n",
-    "        df_event_time = df[cols_event_time].drop_duplicates()\n",
-    "        df_event_time = df_event_time.sort_values(cols_event_time)\n",
-    "        df_event_time['event_time'] = np.arange(len(df_event_time))\n",
-    "        df = pd.merge(df, df_event_time, on=cols_event_time)\n",
-    "        logger.info('Default time transformation')\n",
-    "        return df\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _td_float(df, col_event_time):\n",
-    "        df['event_time'] = df[col_event_time].astype(float)\n",
-    "        logger.info('To-float time transformation')\n",
-    "        return df\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _td_gender(df, col_event_time):\n",
-    "        \"\"\"Gender-dataset-like transformation\n",
-    "\n",
-    "        'd hh:mm:ss' -> float where integer part is day number and fractional part is seconds from day begin\n",
-    "        '1 00:00:00' -> 1.0\n",
-    "        '1 12:00:00' -> 1.5\n",
-    "        '1 01:00:00' -> 1 + 1 / 24\n",
-    "        '2 23:59:59' -> 1.99\n",
-    "        '432 12:00:00' -> 432.5\n",
-    "\n",
-    "        :param df:\n",
-    "        :param col_event_time:\n",
-    "        :return:\n",
-    "        \"\"\"\n",
-    "        padded_time = df[col_event_time].str.pad(15, 'left', '0')\n",
-    "        day_part = padded_time.str[:6].astype(float)\n",
-    "        time_part = pd.to_datetime(padded_time.str[7:], format='%H:%M:%S').values.astype(int) // 1e9\n",
-    "        time_part = time_part % (24 * 60 * 60) / (24 * 60 * 60)\n",
-    "        df['event_time'] = day_part + time_part\n",
-    "        logger.info('Gender-dataset-like time transformation')\n",
-    "        return df\n"
+    "from dltranz.data_preprocessing.pandas_preprocessor import PandasDataPreprocessor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "together-waters",
    "metadata": {},
    "outputs": [],
@@ -497,6 +309,7 @@
     "    time_transformation='none',\n",
     "    cols_category=[\"mcc_code\", \"currency_rk\"],\n",
     "    cols_log_norm=[\"transaction_amt\"],\n",
+    "    cols_identity=[],\n",
     "    print_dataset_info=False,\n",
     ")\n",
     "\n",
@@ -506,6 +319,7 @@
     "    time_transformation='none',\n",
     "    cols_category=['cat_id', 'level_0', 'level_1', 'level_2'],\n",
     "    cols_log_norm=[],\n",
+    "    cols_identity=['new_uid'],\n",
     "    print_dataset_info=False,\n",
     ")"
    ]
@@ -513,14 +327,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "usual-campaign",
+   "id": "vital-female",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "oriented-edinburgh",
    "metadata": {},
    "outputs": [],
@@ -539,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "affiliated-joining",
    "metadata": {},
    "outputs": [],
@@ -563,13 +377,13 @@
     "            'level_0': torch.from_numpy(x['level_0']).int(),\n",
     "            'level_1': torch.from_numpy(x['level_1']).int(),\n",
     "            'level_2': torch.from_numpy(x['level_2']).int(),\n",
-    "\n",
+    "            'new_uid': torch.from_numpy(x['new_uid']).int(),\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "upset-month",
    "metadata": {},
    "outputs": [],
@@ -582,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "horizontal-procedure",
    "metadata": {},
    "outputs": [],
@@ -603,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "parental-tennis",
    "metadata": {},
    "outputs": [],
@@ -623,19 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "progressive-continuity",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 13.6 s, sys: 4.18 s, total: 17.8 s\n",
-      "Wall time: 17.8 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "with open(f'data/features_f{FOLD_ID}.pickle', 'rb') as f:\n",
