cols_identity for new_id

--- a/notebooks/prepare_features.ipynb
+++ b/notebooks/prepare_features.ipynb
@@ -106,7 +106,9 @@
     "from dltranz.metric_learn.sampling_strategies import get_sampling_strategy\n",
     "from dltranz.metric_learn.losses import get_loss\n",
     "\n",
-    "from dltranz.tb_interface import get_scalars"
+    "from dltranz.tb_interface import get_scalars\n",
+    "\n",
+    "from dltranz.data_preprocessing.pandas_preprocessor import PandasDataPreprocessor"
    ]
   },
   {
@@ -117,7 +119,9 @@
    "outputs": [],
    "source": [
     "from vtb_code.data import PairedDataset, paired_collate_fn, DropDuplicate\n",
-    "from vtb_code.metrics import PrecisionK, MeanReciprocalRankK, ValidationCallback"
+    "from vtb_code.metrics import PrecisionK, MeanReciprocalRankK, ValidationCallback\n",
+    "\n",
+    "from vtb_code.preprocessing import trx_types, click_types, trx_to_torch, click_to_torch"
    ]
   },
   {
@@ -230,20 +234,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "related-reception",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trx_types(df):\n",
-    "    df['mcc_code'] = df['mcc_code'].astype(str)\n",
-    "    df['currency_rk'] = df['currency_rk'].astype(str)\n",
-    "    df['event_time'] = pd.to_datetime(df['transaction_dttm']).astype(int) / 1e9\n",
-    "    return df[['user_id', 'event_time', 'mcc_code', 'currency_rk', 'transaction_amt']]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "helpful-gibraltar",
    "metadata": {},
@@ -259,21 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "raised-stereo",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def click_types(df):\n",
-    "    df['event_time'] = pd.to_datetime(df['timestamp']).astype(int) / 1e9\n",
-    "    df = pd.merge(df, pd.read_csv('data/click_categories.csv'), on='cat_id')\n",
-    "    df['cat_id'] = df['cat_id'].astype(str)\n",
-    "    return df[['user_id', 'event_time', 'cat_id', 'level_0', 'level_1', 'level_2', 'new_uid']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "worse-bracelet",
    "metadata": {},
    "outputs": [],
@@ -288,17 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "surprised-penalty",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dltranz.data_preprocessing.pandas_preprocessor import PandasDataPreprocessor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "together-waters",
    "metadata": {},
    "outputs": [],
@@ -327,63 +293,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vital-female",
+   "id": "behind-indication",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "oriented-edinburgh",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_max_size_trx = {\n",
-    "    'mcc_code': 350,\n",
-    "    'currency_rk': 5,\n",
-    "}\n",
-    "category_max_size_click = {\n",
-    "    'cat_id': 400,\n",
-    "    'level_0': 400,\n",
-    "    'level_1': 400,\n",
-    "    'level_2': 400,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "affiliated-joining",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trx_to_torch(seq):\n",
-    "    seq = CategorySizeClip(category_max_size_trx)(seq)\n",
-    "    for x in seq:\n",
-    "        yield x['user_id'], {\n",
-    "            'event_time': torch.from_numpy(x['event_time']).float(),\n",
-    "            'mcc_code': torch.from_numpy(x['mcc_code']).int(),\n",
-    "            'currency_rk': torch.from_numpy(x['currency_rk']).int(),\n",
-    "            'transaction_amt': torch.from_numpy(x['transaction_amt']).float(),\n",
-    "        }\n",
-    "\n",
-    "def click_to_torch(seq):\n",
-    "    seq = CategorySizeClip(category_max_size_click)(seq)\n",
-    "    for x in seq:\n",
-    "        yield x['user_id'], {\n",
-    "            'event_time': torch.from_numpy(x['event_time']).float(),\n",
-    "            'cat_id': torch.from_numpy(x['cat_id']).int(),\n",
-    "            'level_0': torch.from_numpy(x['level_0']).int(),\n",
-    "            'level_1': torch.from_numpy(x['level_1']).int(),\n",
-    "            'level_2': torch.from_numpy(x['level_2']).int(),\n",
-    "            'new_uid': torch.from_numpy(x['new_uid']).int(),\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "upset-month",
    "metadata": {},
    "outputs": [],
@@ -396,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "horizontal-procedure",
    "metadata": {},
    "outputs": [],
@@ -417,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "parental-tennis",
    "metadata": {},
    "outputs": [],
@@ -437,10 +354,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "progressive-continuity",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.8 s, sys: 3.93 s, total: 18.7 s\n",
+      "Wall time: 18.8 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "with open(f'data/features_f{FOLD_ID}.pickle', 'rb') as f:\n",
@@ -459,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "german-airplane",
+   "id": "metropolitan-negative",
    "metadata": {},
    "outputs": [],
    "source": []
