fix data_path for preprocessing

--- a/notebooks/prepare_features.ipynb
+++ b/notebooks/prepare_features.ipynb
@@ -183,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
      "execution_count": 13,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "[11720, 2930, 2931]"
+       "[11721, 2930, 2930]"
       ]
      },
      "execution_count": 15,
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "helpful-gibraltar",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "worse-bracelet",
    "metadata": {},
    "outputs": [],
@@ -257,14 +257,14 @@
     "df_click_train = pd.concat([click_types(pd.read_csv(f'data/clickstream_{i}.csv'))\n",
     "                              for i in range(folds_count) \n",
     "                              if i not in (fold_id_test, fold_id_valid)])\n",
-    "df_click_valid = click_types(pd.read_csv(f'data/clickstream_{fold_id_valid}.csv'))\n",
-    "df_click_test = click_types(pd.read_csv(f'data/clickstream_{fold_id_test}.csv'))\n",
-    "df_click_puzzle = click_types(pd.read_csv(f'data/clickstream_unmatched.csv'))"
+    "df_click_valid = click_types(pd.read_csv(f'data/clickstream_{fold_id_valid}.csv'), data_path='data/')\n",
+    "df_click_test = click_types(pd.read_csv(f'data/clickstream_{fold_id_test}.csv'), data_path='data/')\n",
+    "df_click_puzzle = click_types(pd.read_csv(f'data/clickstream_unmatched.csv'), data_path='data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "together-waters",
    "metadata": {},
    "outputs": [],
@@ -293,14 +293,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behind-indication",
+   "id": "twenty-engineer",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "upset-month",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "horizontal-procedure",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "parental-tennis",
    "metadata": {},
    "outputs": [],
@@ -354,19 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "progressive-continuity",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 14.8 s, sys: 3.93 s, total: 18.7 s\n",
-      "Wall time: 18.8 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "with open(f'data/features_f{FOLD_ID}.pickle', 'rb') as f:\n",
@@ -385,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "metropolitan-negative",
+   "id": "falling-oxford",
    "metadata": {},
    "outputs": [],
    "source": []
