fix data_path for preprocessing

--- a/notebooks/prepare_features.ipynb
+++ b/notebooks/prepare_features.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "helpful-gibraltar",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_click_train = pd.concat([click_types(pd.read_csv(f'data/clickstream_{i}.csv'))\n",
+    "df_click_train = pd.concat([click_types(pd.read_csv(f'data/clickstream_{i}.csv'), data_path='data/')\n",
     "                              for i in range(folds_count) \n",
     "                              if i not in (fold_id_test, fold_id_valid)])\n",
     "df_click_valid = click_types(pd.read_csv(f'data/clickstream_{fold_id_valid}.csv'), data_path='data/')\n",
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twenty-engineer",
+   "id": "passing-credit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -376,7 +376,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "falling-oxford",
+   "id": "matched-burst",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "effective-blackjack",
    "metadata": {},
    "outputs": [],
    "source": []
